force-app/main/default/objects/MIP_Account_Contribution__c/MIP_Account_Contribution__c.object-meta.xml
<CustomObject>
    <description>SOX object - Used to assign Partner Accounts to a Partner Mutual Investment Plan Contract and calculate PSNL and Total Bookings amounts.</description>
    <label>MIP Account Contribution</label>
    <nameField>
        <displayFormat>MIP AC- {0000000}</displayFormat>
        <label>MIP Account Contribution Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>MIP Account Contributions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>