force-app/main/default/objects/MIP_Account_Contribution__c/fields/AccountContractKey__c.field-meta.xml
<CustomField>
    <fullName>AccountContractKey__c</fullName>
    <description>unique key for MIP calculation batch</description>
    <formula>CASESAFEID(Partner_Account__c) + &apos;-&apos; + CASESAFEID(MIP_Contract__c)</formula>
    <label>AccountContractKey</label>
    <type>Text</type>
</CustomField>