force-app/main/default/objects/MIP_Account_Contribution__c/fields/MIP_Contract__c.field-meta.xml
<CustomField>
    <fullName>MIP_Contract__c</fullName>
    <label>MIP Contract</label>
    <referenceTo>MIP_Contract__c</referenceTo>
    <relationshipLabel>MIP Account Contributions</relationshipLabel>
    <relationshipName>MIP_Account_Contributions</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>