force-app/main/default/objects/MIP_Account_Contribution__c/fields/PSNL_Bookings__c.field-meta.xml
<CustomField>
    <fullName>PSNL_Bookings__c</fullName>
    <defaultValue>0.0</defaultValue>
    <label>Partner Sourced Bookings</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>