force-app/main/default/objects/MIP_Account_Contribution__c/fields/Total_Bookings__c.field-meta.xml
<CustomField>
    <fullName>Total_Bookings__c</fullName>
    <defaultValue>0.0</defaultValue>
    <label>Total Bookings</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>